# n-flashcards

./: Cargo.toml  README.md  armv5te-nspire-eabi.json  example.csv.tns
src/: assets.rs  card.rs  gui.rs  main.rs  owned_surface.rs  util.rs
src/assets/: LICENSE.md
src/gui/: card_selector.rs  card_viewer.rs  file_picker.rs
