[package]
name = "n-flashcards"
description = "Flashcards for the TI-Nspire"
version = "1.0.0"
authors = ["lights0123 <developer@lights0123.com>"]
repository = "https://github.com/lights0123/n-flashcards"
edition = "2018"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
ndless = "0.8.1"
ndless-handler = "0.2.0"
csv-core = { version = "0.1.5", default-features = false }
ndless-sdl = "0.1.8"
ndless-freetype = "0.1.3"
unicode-segmentation = "1.3.0"
lazy_static = { version = "1.3.0", features = ["spin_no_std"] }

[package.metadata.zehn]
name = "n-flashcards"
compress = true
notice = "Press enter to switch to the other side of the card. Use esc to exit."
flags = "--240x320-support true"

[profile.release]
lto = true
